traefik/middeware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
spec:
  rateLimit:
    average: 5 ## Quantidade máxima de requisições
    period: 1s # Tratar 5 requisições por segundo
